--- a/style.css
+++ b/style.css
@@ -123,3 +123,21 @@ h1 {
         text-align: center;
     }
 }
+
+#results {
+    margin-top: 20px;
+}
+
+.result {
+    padding: 20px;
+    background: #f8f9fa;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 15px;
+}
+
+.result:last-child {
+    margin-bottom: 0;
+}
